add first EF migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FootballWorldConnectionString": "Server=COMPARISDEV122\\SQL2016;Database=FootballWorld;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
