--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "FootballWorldConnectionString": "Server=COMPARISDEV122\\SQL2016;Database=FootballWorld;Trusted_Connection=True;"
   },
+  "AppSettings": {
+    "Token": "my top secret key" 
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
